<resources>
    <string name="app_name">BookBuddy</string>
    <string name="texto_bienvenida1">Bienvenid@</string>
    <string name="texto_bienvenida2">a BookBuddy!</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="ejemplo_usuario">tu usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="ejemplo_contraseña">tu contraseña</string>
    <string name="boton_inicio_sesion">Iniciar sesión</string>
    <string name="boton_crear_cuenta">Crear cuenta</string>
    <string name="inicio">Inicio</string>
    <string name="subir_libro">Subir Libro</string>
    <string name="perfil">Perfil</string>
    <string name="mod_perfil">Modificar perfil</string>
    <string name="historial">Historial de libros subidos</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="subir_libro1">¿Planeas subir un libro?</string>
    <string name="subir_libro2">¡Dale una nueva vida!</string>
    <string name="nombre_del_libro">Nombre del libro</string>
    <string name="autor">Autor</string>
    <string name="editorial">Editorial</string>
    <string name="resena">Breve reseña (máx 500 caracteres)</string>
    <string name="paginas">Nº de páginas</string>
    <string name="ej_nombre_libro">Ej. El amor en los tiempos del cólera</string>
    <string name="ej_autor">Ej. Gabriel García Márquez</string>
    <string name="ej_editorial">Ej. Editorial Planeta</string>
    <string name="ej_resena">Ej. Me ha gustado mucho, pero...</string>
    <string name="ej_paginas">Ej. 496</string>
    <string name="puesto">Puesto</string>
    <string name="nuevo_nombre_usuario">Introduce un nuevo nombre de usuario</string>
    <string name="nueva_contrasena">Introduce una nueva contraseña</string>
    <string name="nuevo_pais">Introduce un nuevo pais</string>
    <string name="pais">Pais</string>
    <string name="actualizar_perfil">Actualizar el perfil</string>
    <string name="libros_disponibles_puesto">Ver libros disponibles</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="libros_disponibles1">Estos son los libros</string>
    <string name="libros_disponibles2">disponibles en el puesto</string>
    <string name="libros_disponibles3">¿Alguno te llama la atención?</string>
    <string name="ver_info_libro">Ver más información</string>
    <string name="seleccionar_libro">Seleccionar libro</string>
    <string name="historial_1">Actual miembro de:</string>
    <string name="sube_mas_libros">¡Sube más libros para subir de rango!</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>