<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/fondo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mod_perfil"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:id="@+id/titulo_modificar_perfil"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_usuario"
        app:layout_constraintTop_toBottomOf="@id/titulo_modificar_perfil"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="150dp"
        android:layout_marginStart="30dp"
        android:id="@+id/nombre_usuario"/>

    <EditText
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:background="@color/white"
        android:hint="@string/nuevo_nombre_usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nombre_usuario"
        android:layout_marginStart="30dp"
        android:paddingStart="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/texto_nuevo_nombre_usuario"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contraseña"
        app:layout_constraintTop_toBottomOf="@id/texto_nuevo_nombre_usuario"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:id="@+id/contrasena"/>

    <EditText
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:background="@color/white"
        android:hint="@string/nueva_contrasena"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contrasena"
        android:layout_marginStart="30dp"
        android:paddingStart="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/texto_nueva_contrasena"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pais"
        app:layout_constraintTop_toBottomOf="@id/texto_nueva_contrasena"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:id="@+id/pais"/>

    <EditText
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:background="@color/white"
        android:hint="@string/nuevo_pais"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pais"
        android:layout_marginStart="30dp"
        android:paddingStart="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/texto_nuevo_pais"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/black"
        android:text="@string/actualizar_perfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/texto_nuevo_pais"
        android:layout_marginTop="60dp"
        android:id="@+id/bot_confirmar_cambios"
        />






</androidx.constraintlayout.widget.ConstraintLayout>