<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/texto_bienvenida1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="164dp"
        android:text="@string/texto_bienvenida1"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/texto_bienvenida2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/texto_bienvenida2"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/texto_bienvenida1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="60dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/texto_nombre_usuario"
        android:text="@string/nombre_usuario"
        app:layout_constraintTop_toBottomOf="@id/texto_bienvenida2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@+id/nombre_usuario"
        android:hint="@string/ejemplo_usuario"
        android:paddingStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/texto_nombre_usuario"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/texto_contraseña"
        android:text="@string/contraseña"
        app:layout_constraintTop_toBottomOf="@id/nombre_usuario"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@+id/contraseña"
        android:hint="@string/ejemplo_contraseña"
        android:paddingStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/texto_contraseña"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        />

    <Button
        android:id="@+id/boton_iniciar_sesion"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/black"
        android:text="@string/boton_inicio_sesion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contraseña" />

    <Button
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:id="@+id/boton_registro"
        android:text="@string/boton_crear_cuenta"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="60dp"
        app:layout_constraintTop_toBottomOf="@id/boton_iniciar_sesion"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        />







</androidx.constraintlayout.widget.ConstraintLayout>