<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/fondo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:id="@+id/titulo_perfil"
        />

    <Button
        android:layout_width="300dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/titulo_perfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="175dp"
        android:backgroundTint="@color/black"
        android:text="@string/mod_perfil"
        android:id="@+id/boton_mod_perfil"
        />

    <Button
        android:layout_width="300dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/boton_mod_perfil"
        android:layout_marginTop="50dp"
        android:text="@string/historial"
        android:backgroundTint="@color/black"
        android:id="@+id/boton_historial"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_historial"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/black"
        android:text="@string/cerrar_sesion"
        android:id="@+id/boton_cerrar_sesion"/>


</androidx.constraintlayout.widget.ConstraintLayout>